--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -6,9 +6,19 @@ ENV HOST $hostname
 ENV PORT 993
 ENV TELEGRAMAPIKEY $apikey
 ENV CHATID $chatid
+ENV GITREPO $gitrepo
 
-ADD telecam.py .
-ADD requirements.txt .
+# ADD telecam.py .
+# ADD requirements.txt .
 
-RUN pip install -r requirements.txt
-CMD ["python", "./telecam.py"]
+
+# RUN mkdir -p /root/.ssh/
+# RUN chmod -R 600 /root/.ssh/  
+# COPY priv /root/.ssh/priv
+# RUN ssh-keyscan github.com >> /root/.ssh/known_hosts
+
+RUN git clone https://github.com/Crossgoholic/telecam.git
+RUN pip install --upgrade pip 
+
+RUN pip install -r telecam/requirements.txt
+CMD ["python", "./telecam/telecam.py"]
